# vsql-oauth2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TESTING.md  manifest.json  test.sh
.github/workflows/: ci.yml
Docs/: MANUAL_TEST_ENTRA.md  MANUAL_TEST_ENTRA_AUTO_CREATE.md  MANUAL_TEST_GOOGLE.md
cmake/: FindVillageSQL.cmake
mysql-test/r/: oauth_auto_create.result  oauth_auto_grant.result  oauth_basic.result  oauth_client_plugin.result  oauth_ecdsa.result  oauth_existing_user_grant.result
mysql-test/t/: oauth_auto_create.test  oauth_auto_grant.test  oauth_basic.test  oauth_client_plugin.test  oauth_ecdsa.test  oauth_existing_user_grant.test
src/: extension.cc  jwks_cache.cc  jwks_cache.h  oauth_core.cc  oauth_core.h
tools/: README.md  vsql  vsql_entra_login.py  vsql_google_login.py
